[gd_scene load_steps=25 format=2]

[ext_resource path="res://Styles/button_styleboxflat.tres" type="StyleBox" id=1]
[ext_resource path="res://Shaders/godrays.gdshader" type="Shader" id=2]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=3]
[ext_resource path="res://Shaders/grayscale.gdshader" type="Shader" id=4]
[ext_resource path="res://Assets/Fonts/Pixellari.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Styles/Pixellari_style.tres" type="Theme" id=6]
[ext_resource path="res://Styles/Regular_Style.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Other/menu-background.png" type="Texture" id=8]
[ext_resource path="res://Styles/menu_labels.tres" type="Theme" id=9]
[ext_resource path="res://Assets/Other/heart_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Other/heart_2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Other/slider.png" type="Texture" id=12]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/angle = -0.3
shader_param/position = -0.2
shader_param/spread = 0.348
shader_param/cutoff = 0.154
shader_param/falloff = 0.01
shader_param/edge_fade = 0.112
shader_param/speed = 1.0
shader_param/ray1_density = 10.0
shader_param/ray2_density = 30.0
shader_param/ray2_intensity = 0.354
shader_param/color = Color( 1, 0.843137, 0, 1 )
shader_param/hdr = false
shader_param/seed = 5.0

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=7]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 400, 50 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="ImageTexture" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="Animation" id=6]
resource_name = "updown"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("redHeart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 205, 252 ), Vector2( 205, 232 ), Vector2( 205, 252 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blackHeart:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 813, 252 ), Vector2( 813, 232 ), Vector2( 813, 252 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )
_listenerNodePath = "/root/root"

[node name="InGameHUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="InGameHUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 0.333333 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="God-rays" type="ColorRect" parent="InGameHUD"]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationName" type="Label" parent="InGameHUD"]
anchor_right = 1.0
margin_bottom = 31.0
theme = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 0.333333 )
text = "Swamp"
align = 1
valign = 1

[node name="GS-rect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.396851
margin_top = 0.396851
margin_right = -0.396851
margin_bottom = 0.396851
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="MiniMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -137.0
margin_right = 121.0
margin_bottom = -71.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="MiniMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -33.0
margin_right = 150.0
margin_bottom = 33.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "SETTINGS"

[node name="Exit" type="Button" parent="MiniMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 71.0
margin_right = 150.0
margin_bottom = 137.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "EXIT"

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -246.0
margin_right = 75.0
margin_bottom = -186.0
theme = ExtResource( 6 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -190.0
margin_right = 251.0
margin_bottom = -140.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 240, 25 )
custom_icons/grabber_highlight = SubResource( 3 )
custom_icons/grabber = SubResource( 7 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 8 )
custom_styles/grabber_area = SubResource( 5 )
max_value = 10.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -126.0
margin_right = 75.0
margin_bottom = -66.0
theme = ExtResource( 6 )
text = "Audio"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -70.0
margin_right = 251.0
margin_bottom = -20.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 240, 25 )
custom_icons/grabber_highlight = SubResource( 3 )
custom_icons/grabber = SubResource( 9 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 10 )
custom_styles/grabber_area = SubResource( 5 )
max_value = 10.0
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 70.0
theme = ExtResource( 6 )
text = "Timescore"
valign = 1

[node name="TimeCheckBox" type="CheckBox" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 94.0
margin_top = 10.0
margin_right = 136.0
margin_bottom = 70.0
rect_scale = Vector2( 0.855378, 0.843496 )
rect_pivot_offset = Vector2( 21, 30 )
focus_mode = 0
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 11 )
pressed = true
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Location" type="Label" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = 110.0
margin_right = 91.0
margin_bottom = 170.0
theme = ExtResource( 6 )
text = "Location"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocCheckBox" type="CheckBox" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 94.0
margin_top = 110.0
margin_right = 136.0
margin_bottom = 170.0
rect_scale = Vector2( 0.855378, 0.843496 )
rect_pivot_offset = Vector2( 21, 30 )
focus_mode = 0
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 11 )
pressed = true
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_right = 164.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.384314, 0.384314, 0.384314, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0.384314, 0.384314, 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu-background" type="Sprite" parent="MainMenu"]
position = Vector2( 512, 300 )
texture = ExtResource( 8 )

[node name="Play" type="Button" parent="MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -228.0
margin_right = 172.0
margin_bottom = -168.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -156.0
margin_right = 320.0
margin_bottom = -96.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -84.0
margin_right = 165.0
margin_bottom = -24.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -212.0
margin_right = -23.0
margin_bottom = 388.0
theme = ExtResource( 9 )
text = "SSPLIT"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
lines_skipped = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 23.0
margin_top = -212.0
margin_right = 73.0
margin_bottom = 388.0
theme = ExtResource( 9 )
text = "SWORLD"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
lines_skipped = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="redHeart" type="Sprite" parent="MainMenu"]
position = Vector2( 205, 235 )
texture = ExtResource( 10 )

[node name="blackHeart" type="Sprite" parent="MainMenu"]
position = Vector2( 813, 235 )
texture = ExtResource( 11 )

[node name="AnimationHearts" type="AnimationPlayer" parent="MainMenu"]
anims/updown = SubResource( 6 )

[connection signal="pressed" from="MiniMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MiniMenu/Settings" to="." method="_on_Settings_pressed" binds= [ false ]]
[connection signal="pressed" from="MiniMenu/Exit" to="." method="_on_Mini_Exit_pressed"]
[connection signal="value_changed" from="Settings/HSlider" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Settings/HSlider2" to="." method="_on_Audio_value_changed"]
[connection signal="toggled" from="Settings/TimeCheckBox" to="." method="_on_TimeCheckBox_toggled"]
[connection signal="toggled" from="Settings/LocCheckBox" to="." method="_on_LocCheckBox_toggled"]
[connection signal="pressed" from="Settings/Exit" to="." method="_on_Settings_Exit_pressed"]
[connection signal="pressed" from="MainMenu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_Settings_pressed" binds= [ true ]]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_Main_Exit_pressed"]
